fixed overlaps on certain screen sizes

--- a/src/assets/css/extras.css
+++ b/src/assets/css/extras.css
@@ -2345,12 +2345,13 @@
     font-size: 0.9rem;
   }
   .scroll-fix {
-    /* temporary undo this while we improve actions page scrolling*/
-    /* max-height: 70vh;
-    overflow-y: scroll; */
+    width: 20%;
     position: fixed;
-    top:170px;
     left: 30px;
+  }
+  .action-items-n-sidebar-container{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
   }
   .stats-q-box {
     cursor: pointer;
@@ -2898,7 +2899,7 @@
   }
   .scroll-fix {
     height: fit-content;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
   }
   .mob-borderless {
     box-shadow: 0px 0px 0px !important;
